First pass at Panama support.